--- a/validator/templates/results.html
+++ b/validator/templates/results.html
@@ -15,9 +15,10 @@
             <h6>URL: <a href="{{paper.paper_url}}">Paper URL</a></h6>
             {% if not paper.notebooks %}
             <p>No notebooks was found for this paper</p>
-            {% endif %}
+            {% else %}
             {% for notebook in paper.notebooks %}
             <p><b>Notebook URL:</b> <a href="{{notebook.url}}">Notebook URL</a></p>
+            <p><b>Output URL:</b> <a href="/static/uploads/{{notebook.id}}.html">Output URL</a></p>
             <p>
                 {% if notebook.is_failed %}
                     <b style="color:red"> Failed:  True </b>
@@ -32,6 +33,7 @@
             </p>
             <hr>
             {% endfor %}
+            {% endif %}
         {% endfor %}
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
