--- a/validator/templates/results.html
+++ b/validator/templates/results.html
@@ -9,32 +9,36 @@
 
 <body>
     <div class="container mt-4 mb-4">
-        <h1>Results of analysis</h1>
-        {% for paper in papers %}
-            <h4>Paper: {{paper.paper_url}}</h4>
-            <h6>URL: <a href="{{paper.paper_url}}">Paper URL</a></h6>
-            {% if not paper.notebooks %}
-            <p>No notebooks was found for this paper</p>
-            {% else %}
-            {% for notebook in paper.notebooks %}
-            <p><b>Notebook URL:</b> <a href="{{notebook.url}}">Notebook URL</a></p>
-            <p><b>Output URL:</b> <a href="/static/uploads/{{notebook.id}}.html">Output URL</a></p>
-            <p>
-                {% if notebook.is_failed %}
-                    <b style="color:red"> Failed:  True </b>
-                {% else %} 
-                    <b style="color:green"> Failed:  False </b>
+        {% if not results.papers %}
+            <h1 style="color:red;">Wrong results code: {{results.list_id}}</h1>
+        {% else %}
+            <h1>Results of analysis</h1>
+            {% for paper in results.papers %}
+                <h4>Paper: {{paper.paper_url}}</h4>
+                <h6>URL: <a href="{{paper.paper_url}}">Paper URL</a></h6>
+                {% if not paper.notebooks %}
+                <p>No notebooks was found for this paper</p>
+                {% else %}
+                {% for notebook in paper.notebooks %}
+                <p><b>Notebook URL:</b> <a href="{{notebook.url}}">Notebook URL</a></p>
+                <p><b>Output URL:</b> <a href="/static/uploads/{{notebook.id}}.html">Output URL</a></p>
+                <p>
+                    {% if notebook.is_failed %}
+                        <b style="color:red"> Failed:  True </b>
+                    {% else %} 
+                        <b style="color:green"> Failed:  False </b>
+                    {% endif %}
+                </p>
+                <p>
+                    <b>Message:</b>
+                    <br>
+                    {{notebook.message|safe}}
+                </p>
+                <hr>
+                {% endfor %}
                 {% endif %}
-            </p>
-            <p>
-                <b>Message:</b>
-                <br>
-                {{notebook.message|safe}}
-            </p>
-            <hr>
             {% endfor %}
-            {% endif %}
-        {% endfor %}
+        {% endif %}
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js"></script>
