--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -9,7 +9,7 @@
         <div class="container centered-container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3 mt-4 mb-4">
-                    <h1>Check executability of the research paper code</h1>
+                    <h1 class="mb-4">Check executability of the research paper code</h1>
                     <form method="post" enctype="multipart/form-data">
                         <div class="form-group">
                             <textarea class="form-control" placeholder="Paper's URL/DOI or link to the notebook (enter next paper from the next line)"
