experiments with ajax

--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
-        <div class="container centered-container">
+        <div class="main-block container centered-container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3 mt-4 mb-4">
                     <h1 class="mb-4">Check executability of the research paper code</h1>
