--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -27,6 +27,10 @@
                     </form>
                 </div>
             </div>
+            <div class="logs-block container-fluid" style="display:none">
+                <div class="row">
+                    <h1 class="mb-4">Processing logs</h1>
+                </div>
             
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
