--- a/validator/static/css/main.css
+++ b/validator/static/css/main.css
@@ -31,6 +31,12 @@
     font-family: monospace;
 }
 
+.logs-block h1 {
+    display: block;
+    width: 100%;
+}
+
 .logs-block p {
+    width: 100%;
     margin-bottom: 0;
 }
