--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -30,7 +30,7 @@
         </div>
         <div class="logs-block container-fluid">
             <div class="row">
-                <h1 class="mb-4">Processing logs</h1>
+                <h1 class="mt-4 mb-4">Processing logs</h1>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
