--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -28,7 +28,7 @@
                 </div>
             </div>            
         </div>
-        <div class="logs-block container-fluid">
+        <div class="logs-block container-fluid mb-4">
             <div class="row">
                 <h1 class="mt-4 mb-4">Processing logs</h1>
             </div>
