--- a/validator/templates/results.html
+++ b/validator/templates/results.html
@@ -16,16 +16,16 @@
             {% for paper in results.papers %}
                 <h4>Paper: {{paper.paper_url}}</h4>
                 {% if paper.url_type == 'doi' %}
-                    <h6>URL: <a href="https://dx.doi.org/{{paper.paper_url}}">Paper URL</a> ({{paper.url_type}})</h6>
+                    <h6>URL: <a target="_blank" href="https://dx.doi.org/{{paper.paper_url}}">Paper URL</a> ({{paper.url_type}})</h6>
                 {% else %}
-                    <h6>URL: <a href="{{paper.paper_url}}">Paper URL</a> ({{paper.url_type}})</h6>
+                    <h6>URL: <a target="_blank" href="{{paper.paper_url}}">Paper URL</a> ({{paper.url_type}})</h6>
                 {% endif %}
                 {% if not paper.notebooks %}
                 <p>No notebooks was found for this paper</p>
                 {% else %}
                 {% for notebook in paper.notebooks %}
-                <p><b>Notebook URL:</b> <a href="{{notebook.url}}">Notebook URL</a></p>
-                <p><b>Output URL:</b> <a href="/static/uploads/{{notebook.id}}.html">Output URL</a></p>
+                <p><b>Notebook URL:</b> <a target="_blank" href="{{notebook.url}}">Notebook URL</a></p>
+                <p><b>Output URL:</b> <a target="_blank" href="/static/uploads/{{notebook.id}}.ipynb.html">Output URL</a></p>
                 <p>
                     {% if notebook.is_failed %}
                         <b style="color:red"> Failed:  True </b>
