--- a/validator/templates/results.html
+++ b/validator/templates/results.html
@@ -10,9 +10,16 @@
 <body>
     <div class="container mt-4 mb-4">
         {% if not results.papers %}
-            <h1 style="color:red;">Wrong results code: {{results.list_id}}</h1>
+            <h1 style="color:red;">Wrong results code</h1>
         {% else %}
-            <h1 class="mb-4">Results of analysis</h1>
+            <h1 class="mb-4">Report</h1>
+            <h3>List of papers</h3>
+            <ul>
+            {% for paper in results.papers %}
+                <li>{{paper.paper_url}}</li>
+            {% endfor %}
+            </ul>
+            <h3>Results of analysis</h3>
             {% for paper in results.papers %}
                 <h4>Paper: {{paper.paper_url}}</h4>
                 {% if paper.url_type == 'doi' %}
