--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -45,7 +45,7 @@
                 </div>
             </div>            
         </div>
-        <div class="logs-block container-fluid mb-4">
+        <div class="logs-block container mb-4">
             <div class="row">
                 <h5 class="mt-4 mb-4">Processing logs</h5>
             </div>
