update tab names in upload form

--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -15,10 +15,10 @@
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs nav-center" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#upload-text" role="tab">Upload text</a>
+                                <a class="nav-link active" data-toggle="tab" href="#upload-text" role="tab">Write links to the papers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#upload-file" role="tab">Upload file</a>
+                                <a class="nav-link" data-toggle="tab" href="#upload-file" role="tab">Upload links to the papers</a>
                             </li>
                         </ul>
 
