grammar fix in upload form

--- a/validator/templates/upload.html
+++ b/validator/templates/upload.html
@@ -26,7 +26,7 @@
                         <div class="tab-content p-4">
                             <div class="tab-pane active" id="upload-text" role="tabpanel">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Paper's URL/DOI or link to the notebook (enter next paper from the next line)"
+                                    <textarea class="form-control" placeholder="Enter links to each publication from a new line"
                                         id="text" name="text" rows="4"></textarea>
                                 </div>
                             </div>
